# market-oracle

./: .gitignore  LICENSE  README.md  discover.py  main.py  models.py  pyproject.toml
scripts/: cli.py
src/: __init__.py  fetcher.py
src/market_oracle/: __init__.py  cli.py
tests/: test_models.py
